# pylotus123

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTORS.md  LICENSE  README.md  ROADMAP.md  main.py  pyproject.toml  sample_data.json  sample_data2.json  test.chart  test.csv  test.json
lotus123/: __init__.py  app.py  formula.py  spreadsheet.py
lotus123/charting/: __init__.py  chart.py  renderer.py
lotus123/charting/renderers/: __init__.py  bar.py  base.py  line.py  pie.py  scatter.py  stacked.py
lotus123/core/: __init__.py  cell.py  errors.py  formatting.py  named_ranges.py  protection.py  protocols.py  reference.py  spreadsheet.py  spreadsheet_protocol.py
lotus123/data/: __init__.py  criteria.py  database.py  fill.py
lotus123/formula/: __init__.py  context.py  evaluator.py  parser.py  recalc.py  recalc_types.py  tokenizer.py
lotus123/formula/functions/: __init__.py  database.py  datetime.py  financial.py  info.py  logical.py  lookup.py  math.py  statistical.py  string.py
lotus123/handlers/: __init__.py  base.py  chart_handlers.py  clipboard_handlers.py  data_handlers.py  file_handlers.py  import_export_handlers.py  navigation_handlers.py  query_handlers.py  range_handlers.py  worksheet_handlers.py
lotus123/io/: __init__.py  lotus_json.py  text_export.py  text_import.py  wk1.py  xlsx.py  xlsx_format_translator.py  xlsx_formula_translator.py
lotus123/ui/: __init__.py  config.py  grid.py  menu_bar.py  status_bar.py  themes.py  window.py
lotus123/ui/dialogs/: __init__.py  chart_view.py  command_input.py  file_dialog.py  sheet_select_dialog.py  theme_dialog.py
lotus123/ui/menu/: __init__.py  menu_system.py
lotus123/utils/: __init__.py  clipboard.py  os_clipboard.py  undo.py
samples/: sales_dashboard.chart  sales_dashboard.json  sales_dashboard.xlsx  sample1.csv  sample1.json  sample1.tsv  sample1.wk1  sample1.xlsx  sample1_graph1.chart  sample1_graph2.chart
specs/: BIWEEKLY.WKB  DEMO.WK4  GRAPH.WKS  example.wk1  example.wk4  example.wks  wk1_file_spec.txt
tests/: __init__.py  conftest.py  test_audit_phase3.py  test_criteria.py  test_database.py  test_evaluator.py  test_fill_operations.py  test_formatting.py  test_formula.py  test_formula_functions.py  test_handlers_mock.py  test_info_functions.py  test_io.py  test_menu_system.py  test_recalc.py  test_spreadsheet.py  test_spreadsheet_operations.py  test_ui.py  test_ui_mock.py  test_undo.py  test_window.py
tests/audit/: test_audit_clipboard.py  test_audit_phase3.py
tests/core/: test_clipboard.py  test_formatting.py  test_named_ranges.py  test_optimizations.py  test_protection.py  test_spreadsheet.py  test_spreadsheet_operations.py  test_undo.py  test_undo_dependencies.py
tests/data/: test_criteria.py  test_database.py  test_database_functions.py  test_fill.py  test_fill_operations.py
tests/formula/: test_datetime_functions.py  test_dependency_complex.py  test_evaluator.py  test_financial_functions.py  test_formula.py  test_formula_functions.py  test_info_functions.py  test_logical_functions.py  test_lookup_functions.py  test_math_functions.py  test_recalc.py  test_statistical_functions.py  test_string_functions.py
tests/handlers/: test_handlers_mock.py
tests/io/: test_config.py  test_io.py  test_text_export.py  test_text_import.py  test_wk1.py  test_xlsx.py  test_xlsx_translators.py
tests/ui/: test_app.py  test_charting.py  test_grid_mock.py  test_menu_system.py  test_status_bar_mock.py  test_ui.py  test_ui_comprehensive.py  test_ui_mock.py  test_window.py
tests/utils/: test_os_clipboard.py
