[project]
name = "lotus123"
version = "0.1.0"
description = "A modern Lotus 1-2-3 clone with enhanced terminal graphics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "textual>=6.11.0",
]

[project.scripts]
lotus123 = "lotus123.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest-asyncio>=1.3.0",
]

[tool.mypy]
python_version = "3.12"
no_implicit_optional = true
