[project]
name = "lotus123"
version = "0.1.0"
description = "A modern Lotus 1-2-3 clone with enhanced terminal graphics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.0",
    "textual>=6.11.0",
]

[project.scripts]
lotus123 = "lotus123.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.mypy]
python_version = "3.12"
no_implicit_optional = true

[tool.ruff.lint.isort]
force-single-line = false           # allows multiple imports per line
combine-as-imports = true           # combines from x import a and from x import b into from x import a, b

[tool.ruff.format]
skip-magic-trailing-comma = true    # ignore trailing commas that force one-per-line
