[project]
name = "lotus123"
version = "0.1.0"
description = "A modern Lotus 1-2-3 clone with enhanced terminal graphics"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.0",
    "textual>=7.0.0",
]

[project.scripts]
lotus123 = "lotus123.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:coroutine 'DirectoryTree.watch_path' was never awaited:RuntimeWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-m 'not slow'"

[dependency-groups]
dev = [
    "basedpyright>=1.37.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "types-openpyxl>=3.1.5.20250919",
]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"  # Not "strict" or "all"
# Loosen the most annoying rules
reportAny = false                       # Don't flag every Any usage
reportUnknownMemberType = false         # Too noisy with third-party libs
reportUnknownArgumentType = false       # Same issue
reportUnknownVariableType = false       # Same issue
reportMissingTypeStubs = "warning"      # Don't error on untyped libraries
reportPrivateUsage = "error"            # Accessing _private is sometimes needed
reportUnnecessaryIsInstance = false     # Sometimes explicit checks aid readability

[[tool.basedpyright.executionEnvironments]]
root = "tests"
extraPaths = ["."]                      # Allow tests to import lotus123
reportPrivateUsage = false              # Relaxed for tests
reportUnknownMemberType = false
reportAttributeAccessIssue = false
reportArgumentType = false
reportAny = false

[tool.ruff]
line-length = 100

[tool.ruff.lint.isort]
force-single-line = false           # allows multiple imports per line
combine-as-imports = true           # combines from x import a and from x import b into from x import a, b

[tool.ruff.format]
skip-magic-trailing-comma = false   # Having a trailing comma will force one-per-line
